--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -47,7 +47,7 @@ jobs:
       - name: Deploy
         uses: AEnterprise/rsync-deploy@v1.0
         env:
-          DEPLOY_KEY: ${{ secrets.SSH_KEY }}
+          DEPLOY_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
           ARGS: '-avzh --exclude=".*"'
           SERVER_PORT: ${{ secrets.PORT }}
           FOLDER: "./"
