--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -44,6 +44,8 @@ jobs:
         shell: bash
         env:
           DOT_ENV: ${{secrets.DOT_ENV}}
+      - name: Build project node
+        run: npm run build
       - name: Deploy
         uses: AEnterprise/rsync-deploy@v1.0
         env:
